--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <script src="//unpkg.com/alpinejs" defer></script>
-     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
       if (
         localStorage.getItem("dark-mode") === "true" ||
@@ -388,41 +388,41 @@
         <div class="h-48 w-48 rounded-full">
           <img
             class="h-full w-full rounded-full"
-            src="./asset/asset.jpg"
+            src="./asset/profileImg.jpeg"
             alt=""
           />
         </div>
         <div class="text-center">
           <h1 class="md:text-[28pt] text-[20pt] dark:text-[#F8F8F2]">
-            Nikoloz Sirmpilatze
+            Ayodele Ernest Elebute
           </h1>
           <p
             class="text-gray-500 dark:text-[#A9A9AE] md:text-[16pt] text-[14pt]"
           >
-            Research Software Engineer
+            Seasoned Academician
           </p>
           <p>
             <a
               href="#"
               class="text-[#33B38D] cursor-pointer active:underline md:text-[16pt] text-[14pt]"
             >
-              Sainsbury Wellcome Centre
+              Mass Communication
             </a>
           </p>
-          <p class="w-[90%] cursor-pointer pl-8 text-center py-2">
+          <!-- <p class="w-[90%] cursor-pointer pl-8 text-center py-2">
             <a
               href="#"
               class="text-[#33B38D] active:underline leading-snug md:text-[16pt] text-[14pt]"
             >
-              Gatsby Computational Neuroscience Unit
+
             </a>
-          </p>
+          </p> -->
           <p>
             <a
               href="#"
               class="text-[#33B38D] cursor-pointer active:underline md:text-[16pt] text-[14pt]"
             >
-              University College London (UCL)
+              University Of Ibadan (UI)
             </a>
           </p>
           <div class="flex flex-row items-center pt-6 justify-center">
@@ -509,40 +509,86 @@
         <p
           class="md:text-[14pt] text-[12pt] font-medium md:leading-relaxed pt-2"
         >
-          I’m Niko, a medical doctor turned neuroscientist and image analyst.
-          Since October 2022, I work as a Research Software Engineer at the<span
-            ><a class="hover:underline text-[#33B38D]" href="#">
-              Sainsbury Wellcome Centre
-            </a></span
-          >
-          and
+          Greetings, I am Ayodele Ernest Elebute, a seasoned academician rooted
+          in Mass Communication within the faculty of Management and Social
+          Sciences.
           <span
             ><a class="hover:underline text-[#33B38D]" href="#">
-              Gatsby Computational Neuroscience Unit</a
+              Starting as an Assistant Lecturer
+            </a></span
+          >
+          ,
+          <span
+            ><a class="hover:underline text-[#33B38D]" href="#">
+              I now proudly hold the position of Professor</a
             ></span
           >.
         </p>
 
         <p class="md:text-[14pt] text-[12pt] font-medium leading-relaxed pt-6">
-          I completed my PhD at the
+          My academic journey includes earning a Bachelor of Arts (Hons) with
+          Second Class Upper honors from the University of Benin in 1987.
+
           <span
             ><a class="hover:underline text-[#33B38D]" href="#">
-              Functional Imaging Lab
+              This marked the beginning of a scholarly venture that led to
+              subsequent achievements: Master of Arts in 1991, Master of
+              Philosophy in 2002, Master of Science in 2012,
             </a></span
           >
-          of the
+          and
           <span
             ><a class="hover:underline text-[#33B38D]" href="#">
-              German Primate Center</a
+              the pinnacle—a Doctor of Philosophy obtained in 2010, all from the
+              esteemed University of Ibadan.</a
             ></span
-          >, where I studied the effects of anesthesia on brain function using
-          neuroimaging techniques, including functional Magnetic Resonance
-          Imaging (fMRI) and in vivo 2‐photon calcium imaging.
+          >
+          Complementing my academic voyage, I acquired professional accolades,
+          including a National Diploma in Fine-Arts (Upper Credit) in 1983, a
+          Postgraduate Diploma in Journalism in 1997, and a Professional
+          Certificate in Management in 2008.
         </p>
         <p class="md:text-[14pt] text-[12pt] font-medium leading-relaxed pt-6">
-          I care about promoting open, collaborative, and reproducible science.
-          In my free time, you will find me dancing to swing music and trying to
-          play the saxophone.
+          Beyond the academic realm, I've been honored as the PATRON of IUO
+          Press Club at
+          <span
+            ><a class="hover:underline text-[#33B38D]" href="https://iuokada.edu.ng/">
+              Igbinedion University
+            </a></span
+          >
+          , Okada, in 2015. Contributing externally, I served as an External
+          Moderator for various institutions and received recognition through
+          awards such as Chief Editor of the Year and Most Supportive Lecturer.
+          Venturing into the professional landscape, I lent my expertise to
+          institutions like
+          <span
+            ><a class="hover:underline text-[#33B38D]" href="#">Methodist
+            High School </a></span
+          >, Lagos-Ibadan,
+          <span
+            ><a class="hover:underline text-[#33B38D]" href="https://www.kwarastatepolytechnic.edu.ng/">Kwara State
+            College Of Education Ilorin </a></span
+          >
+        , The
+          <span
+            ><a class="hover:underline text-[#33B38D]" href="https://www.polyibadan.edu.ng/">
+              Polytechnic Ibadan
+            </a></span
+          >,  <span
+            ><a class="hover:underline text-[#33B38D]" href="https://nij.edu.ng/">
+           Nigerian Institute of Journalism
+            </a></span
+          > , <span
+            ><a class="hover:underline text-[#33B38D]" href="http://apconng.blogspot.com/p/about-us.html">
+       Advertising Practitioner Council
+          of Nigeria
+            </a></span
+          > , and Jireh-Soft Graphics and Prints. Beyond the scholarly
+          and professional realms, my interests extend to extracurricular
+          activities. You will find me engaging in activities such as reading,
+          writing, and traveling in my free time. In essence, I have transcended
+          the conventional academic role, embodying a dynamic blend of
+          scholarship, mentorship, and multifaceted interests.
         </p>
         <div
           class="flex md:flex-row flex-col md:justify-between justify-start pt-6"
@@ -556,11 +602,21 @@
             <ul
               class="list-disc list-inside md:pl-6 md:text-[12pt] text-sm md:space-y-2"
             >
-              <li class="font-medium">Neuroscience</li>
-              <li class="font-medium">Neuroimaging</li>
-              <li class="font-medium">Anasthesia</li>
-              <li class="font-medium">Open Science</li>
-              <li class="font-medium">Software</li>
+              <li class="font-medium">Mass Communication Research</li>
+              <li class="font-medium">Journalism and Media Ethics</li>
+              <li class="font-medium">Media Management and Strategy</li>
+              <li class="font-medium">Fine Arts and Visual Communication</li>
+              <li class="font-medium">
+                External Moderation in Academic Assessment
+              </li>
+              <li class="font-medium">Creative Writing</li>
+
+              <li class="font-medium">Collaborative Research Promotion
+</li>
+              <li class="font-medium">Nigerian Art and Artists
+</li>
+              <li class="font-medium">Management Studies
+</li>
             </ul>
           </div>
           <div class="md:pt-0 pt-6">
@@ -612,12 +668,15 @@
               ></span>
               <div>
                 <p class="md:text-[12pt] text-[10pt] font-medium">
-                  PhD in Neuroimaging, May 2017 - Sep 2021
+
+Doctor of Philosophy (PhD) in Mass Communication
+
                 </p>
                 <p
                   class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
                 >
-                  German Primate Center
+                University of Ibadan, Ibadan - 2010
+
                 </p>
               </div>
             </div>
@@ -664,12 +723,14 @@
               ></span>
               <div>
                 <p class="md:text-[12pt] text-[10pt] font-medium">
-                  MSc in Neuroscience, Sep 2015 - Apr 2017
+            Master of Science (MSc) in Mass Communication
+
                 </p>
                 <p
                   class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
                 >
-                  German Primate Center
+               National Open University of Nigeria - 2012
+
                 </p>
               </div>
             </div>
@@ -716,12 +777,184 @@
               ></span>
               <div>
                 <p class="md:text-[12pt] text-[10pt] font-medium">
-                  Medical Degree, Sep 2009 - Jul 2015
+
+Master of Philosophy (MPhil) in Mass Communication
+
                 </p>
                 <p
                   class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
                 >
-                  German Primate Center
+                 University of Ibadan, Ibadan - 2002
+
+                </p>
+              </div>
+            </div>
+            <div class="flex flex-row space-x-3 md:pl-6">
+              <span class="pt-2 dark:text-[#F8F8F2] text-black"
+                ><svg
+                  height="24px"
+                  width="24px"
+                  version="1.1"
+                  id="Icons"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 32 32"
+                  xml:space="preserve"
+                  fill="currentColor"
+                  transform="matrix(-1, 0, 0, 1, 0, 0)"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <style type="text/css">
+                      .st0 {
+                        fill: currentColor;
+                      }
+                    </style>
+                    <g>
+                      <path
+                        d="M31,26c-0.6,0-1-0.4-1-1V12c0-0.6,0.4-1,1-1s1,0.4,1,1v13C32,25.6,31.6,26,31,26z"
+                      ></path>
+                    </g>
+                    <g>
+                      <path
+                        d="M16,21c-0.2,0-0.3,0-0.5-0.1l-15-8C0.2,12.7,0,12.4,0,12s0.2-0.7,0.5-0.9l15-8c0.3-0.2,0.6-0.2,0.9,0l15,8 c0.3,0.2,0.5,0.5,0.5,0.9s-0.2,0.7-0.5,0.9l-15,8C16.3,21,16.2,21,16,21z"
+                      ></path>
+                    </g>
+                    <path
+                      d="M17.4,22.6C17,22.9,16.5,23,16,23s-1-0.1-1.4-0.4L6,18.1V22c0,3.1,4.9,6,10,6s10-2.9,10-6v-3.9L17.4,22.6z"
+                    ></path>
+                  </g></svg
+              ></span>
+              <div>
+                <p class="md:text-[12pt] text-[10pt] font-medium">
+
+Master of Philosophy (MPhil) in Mass Communication
+
+                </p>
+                <p
+                  class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
+                >
+                 University of Ibadan, Ibadan - 2002
+
+                </p>
+              </div>
+            </div>
+            <div class="flex flex-row space-x-3 md:pl-6">
+              <span class="pt-2 dark:text-[#F8F8F2] text-black"
+                ><svg
+                  height="24px"
+                  width="24px"
+                  version="1.1"
+                  id="Icons"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 32 32"
+                  xml:space="preserve"
+                  fill="currentColor"
+                  transform="matrix(-1, 0, 0, 1, 0, 0)"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <style type="text/css">
+                      .st0 {
+                        fill: currentColor;
+                      }
+                    </style>
+                    <g>
+                      <path
+                        d="M31,26c-0.6,0-1-0.4-1-1V12c0-0.6,0.4-1,1-1s1,0.4,1,1v13C32,25.6,31.6,26,31,26z"
+                      ></path>
+                    </g>
+                    <g>
+                      <path
+                        d="M16,21c-0.2,0-0.3,0-0.5-0.1l-15-8C0.2,12.7,0,12.4,0,12s0.2-0.7,0.5-0.9l15-8c0.3-0.2,0.6-0.2,0.9,0l15,8 c0.3,0.2,0.5,0.5,0.5,0.9s-0.2,0.7-0.5,0.9l-15,8C16.3,21,16.2,21,16,21z"
+                      ></path>
+                    </g>
+                    <path
+                      d="M17.4,22.6C17,22.9,16.5,23,16,23s-1-0.1-1.4-0.4L6,18.1V22c0,3.1,4.9,6,10,6s10-2.9,10-6v-3.9L17.4,22.6z"
+                    ></path>
+                  </g></svg
+              ></span>
+              <div>
+                <p class="md:text-[12pt] text-[10pt] font-medium">
+
+Master of Arts (MA) in Mass Communication
+
+
+                </p>
+                <p
+                  class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
+                >
+              University of Ibadan, Ibadan - 1991
+
+
+                </p>
+              </div>
+            </div>
+            <div class="flex flex-row space-x-3 md:pl-6">
+              <span class="pt-2 dark:text-[#F8F8F2] text-black"
+                ><svg
+                  height="24px"
+                  width="24px"
+                  version="1.1"
+                  id="Icons"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 32 32"
+                  xml:space="preserve"
+                  fill="currentColor"
+                  transform="matrix(-1, 0, 0, 1, 0, 0)"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <style type="text/css">
+                      .st0 {
+                        fill: currentColor;
+                      }
+                    </style>
+                    <g>
+                      <path
+                        d="M31,26c-0.6,0-1-0.4-1-1V12c0-0.6,0.4-1,1-1s1,0.4,1,1v13C32,25.6,31.6,26,31,26z"
+                      ></path>
+                    </g>
+                    <g>
+                      <path
+                        d="M16,21c-0.2,0-0.3,0-0.5-0.1l-15-8C0.2,12.7,0,12.4,0,12s0.2-0.7,0.5-0.9l15-8c0.3-0.2,0.6-0.2,0.9,0l15,8 c0.3,0.2,0.5,0.5,0.5,0.9s-0.2,0.7-0.5,0.9l-15,8C16.3,21,16.2,21,16,21z"
+                      ></path>
+                    </g>
+                    <path
+                      d="M17.4,22.6C17,22.9,16.5,23,16,23s-1-0.1-1.4-0.4L6,18.1V22c0,3.1,4.9,6,10,6s10-2.9,10-6v-3.9L17.4,22.6z"
+                    ></path>
+                  </g></svg
+              ></span>
+              <div>
+                <p class="md:text-[12pt] text-[10pt] font-medium">
+
+Bachelor of Arts (BA Hons) in Mass Communication
+
+
+                </p>
+                <p
+                  class="text-[#666666] dark:text-[#A9A9AE] md:text-sm text-[8pt] pt-1 font-medium"
+                >
+           University of Benin, Benin City - 1987
+
+
                 </p>
               </div>
             </div>
@@ -998,9 +1231,7 @@
             aria-labelledby="tabs-home-tab"
             data-te-tab-active
           >
-            <div
-         
-            >
+            <div>
               <div
                 class="flex flex-row justify-between hover:text-[#33b38d] dark:hover:text-[#33b38d] items-start"
               >
